// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`values() should fail 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Values should follow the rule: [Every value should follow the rule: [Value should match regexp: /^test/]]",
      "path": Array [],
      "value": Object {
        "a": "testA",
        "b": "testB",
        "c": 5,
      },
    },
  ],
  "rootValue": Object {
    "a": "testA",
    "b": "testB",
    "c": 5,
  },
}
`;

exports[`values() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Custom message",
      "path": Array [],
      "value": Object {
        "a": "testA",
        "b": 5,
      },
    },
  ],
  "rootValue": Object {
    "a": "testA",
    "b": 5,
  },
}
`;
